# adk-agui-middleware

./: .bandit  .gitignore  .pyscn.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  check.sh  check_enum.py  debug_state_event.py  pyproject.toml  test.sh  test_debug.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml  security_vulnerability.yml
.github/codeql/: codeql-config.yml
.github/prompts/: bug-assessment.prompt.yml  comprehensive-assessment.prompt.yml  duplicate-detection.prompt.yml  feature-assessment.prompt.yml  question-assessment.prompt.yml  security-assessment.prompt.yml  team-assignment.prompt.yml
.github/workflows/: ai-issue-assessment.yml  ci.yml  codeql.yml  gitleaks.yml  pr-agent.yml  pre-commit.yml  publish.yml  quick-check.yml  release.yml  security.yml  semgrep.yml
adk-agui-middleware/: error_event.py  old_agui.py  sse_service.py
adk-agui-middleware/data_model/: error.py  session.py
adk-agui-middleware/handler/: session.py
adk-agui-middleware/loggers/: exception.py  logger.py  record_log.py  record_request_log.py
adk-agui-middleware/manager/: execution_manger.py  session.py  session_manager.py
adk-agui-middleware/tools/: client_proxy_tool.py  client_proxy_toolset.py  convert.py  event_translator.py  execution_state.py  function_name.py  json_encoder.py
examples/: README.md
examples/01_minimal_sse/: README.md  app.py
examples/02_context_history/: README.md  app.py
examples/03_advanced_pipeline/: README.md  app.py
examples/04_lifecycle_handlers/: README.md  app.py
src/adk_agui_middleware/: __init__.py  endpoint.py  sse_service.py
src/adk_agui_middleware/base_abc/: event_handler.py  handler.py  sse_service.py
src/adk_agui_middleware/config/: log.py
src/adk_agui_middleware/data_model/: common.py  config.py  context.py  error.py  event.py  log.py  queue.py  session.py
src/adk_agui_middleware/event/: agui_event.py  agui_type.py  error_event.py  event_translator.py
src/adk_agui_middleware/handler/: agui_message.py  agui_user.py  history.py  queue.py  running.py  session.py  session_lock_handler.py  user_message.py
src/adk_agui_middleware/loggers/: exception.py  logger.py  record_log.py  record_request_log.py
src/adk_agui_middleware/manager/: queue.py  session.py
src/adk_agui_middleware/pattern/: singleton.py
src/adk_agui_middleware/service/: history_service.py  sse_service.py  state_service.py
src/adk_agui_middleware/tools/: async_queue_iterator.py  convert.py  create_function_with_params.py  default_config_context.py  default_session_id.py  event_translator.py  frontend_tool.py  function_name.py  json_encoder.py  shutdown.py
src/adk_agui_middleware/utils/: __init__.py  convert.py
src/adk_agui_middleware/utils/convert/: adk_event_to_agui_message.py  agui_event_list_to_message_list.py  agui_event_to_sse.py  agui_tool_message_to_adk_function_response.py
src/adk_agui_middleware/utils/translate/: __init__.py  common.py  function_calls.py  message.py  state.py  thinking.py
tests/: __init__.py  test_agui_user_coverage.py  test_data_model_context.py  test_data_model_error.py  test_data_model_session.py  test_data_models.py  test_endpoint.py  test_endpoint_coverage.py  test_error_event_coverage.py  test_event_error_event.py  test_event_translator_coverage.py  test_handler_agui_user.py  test_handler_running.py  test_handler_session.py  test_handler_user_message.py  test_integrated.py  test_loggers_exception.py  test_manager_session.py  test_manager_session_additional.py  test_manager_session_comprehensive.py  test_session_manager_coverage.py  test_shutdown_coverage.py  test_simple_coverage.py  test_sse_service.py  test_tools.py  test_tools_convert.py  test_tools_event_translator.py  test_tools_function_name.py  test_tools_json_encoder.py  test_tools_shutdown.py  test_utils.py  test_utils_convert_adk_event_message_converter_comprehensive.py  test_utils_translate_common_actual.py
